[project]
name = "astroplan"
authors = [
    { name = "Astroplan developers", email = "astropy-dev@googlegroups.com" }
]
license = "BSD-3-Clause"
license-files = ["LICENSE.rst", "licenses/*.rst"]
description = "Observation planning package for astronomers"
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = [
    "astronomy",
    "astrophysics",
    "observation",
    "planning",
    "science",
]
dynamic = [
    "version"
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.23.2",
    "astropy>=6.0",
    "pytz"
]

[project.optional-dependencies]
all = [
    "matplotlib>=3.6.0",
    "astroquery"
]
test = [
    "pytest-astropy",
    "pytest-mpl"
]
docs = [
    "astroplan[all]",
    "sphinx-astropy[confv2]",
    "sphinx-rtd-theme"
]
plotting = [
    "astroplan[all]"
]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/astropy/astroplan"
Documentation = "https://astroplan.readthedocs.io/en/latest/"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.package-data]
"astroplan.plots.tests" = [
    "baseline_images/*.png",
]

[tool.setuptools_scm]
write_to = "astroplan/_version.py"

[build-system]
requires = ["setuptools>=77.0.1",
            "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "astroplan",
    "docs",
]
norecursedirs = [
    "build",
    "docs[\\/]_build",
]
astropy_header = true
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:numpy\\.ufunc size changed:RuntimeWarning",
    "ignore:numpy\\.ndarray size changed:RuntimeWarning",
    # deprecated in Matplotlib 3.9 and will be removed in 3.11. Use plot instead.
    "ignore:The plot_date function was deprecated",
]

[tool.coverage.run]
omit = [
    "astroplan/conftest.py",
    "astroplan/tests/*",
    "astroplan/*/tests/*",
    "astroplan/version*",
    "*/astroplan/conftest.py",
    "*/astroplan/tests/*",
    "*/astroplan/*/tests/*",
    "*/astroplan/version*",
]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about packages we have installed
    "except ImportError",
    # Don't complain if tests don't hit assertions
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain about script hooks
    "def main\\(.*\\):",
    # Ignore branches that don't pertain to this version of Python
    "pragma: py{ignore_python_version}",
    # Don't complain about IPython completion helper
    "def _ipython_key_completions_",
]
