[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
addopts = --doctest-ignore-import-errors
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = astroplan
description = Observation planning package for astronomers
long_description = Observation planning package for astronomers
author = Astroplan developers
author_email = astropy-dev@googlegroups.com
license = BSD
url = https://github.com/astropy/astroplan
edit_on_github = False
github_project = astropy/astroplan

[entry_points]

[flake8]
exclude = _astropy_init.py,extern,__init__.py
max-line-length = 100

[pycodestyle]
exclude = _astropy_init.py,extern,__init__.py
max-line-length = 100
