[metadata]
name = astroplan
author = Astroplan developers
author_email = astropy-dev@googlegroups.com
license = BSD
license_file = LICENSE.rst
url = https://github.com/astropy/astroplan
description = Observation planning package for astronomers
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = astropy/astroplan

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    numpy>=1.17
    astropy>=4
    pytz

[options.extras_require]
all =
    matplotlib>=1.4
    astroquery
test =
    pytest-astropy
    pytest-mpl
docs =
    sphinx-astropy[confv2]
    sphinx-rtd-theme
    matplotlib>=1.4
    astroquery
plotting =
    astroquery
    matplotlib>=1.4

[options.package_data]
astroplan = data/*

[tool:pytest]
testpaths = "astroplan" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst --doctest-ignore-import-errors
norecursedirs = build docs/_build
filterwarnings =
    error
    ignore:numpy\.ndarray size changed:RuntimeWarning
    ignore:numpy\.ufunc size changed:RuntimeWarning
    # Can remove ignore when you bump astropy minversion high enough
    ignore:distutils Version classes are deprecated:DeprecationWarning
    # deprecated in Matplotlib 3.9 and will be removed in 3.11. Use plot instead.
    ignore:The plot_date function was deprecated

[coverage:run]
omit =
    astroplan/_astropy_init*
    astroplan/conftest.py
    astroplan/*setup_package*
    astroplan/tests/*
    astroplan/*/tests/*
    astroplan/extern/*
    astroplan/version*
    */astroplan/_astropy_init*
    */astroplan/conftest.py
    */astroplan/*setup_package*
    */astroplan/tests/*
    */astroplan/*/tests/*
    */astroplan/extern/*
    */astroplan/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
exclude = _astropy_init.py,extern,__init__.py
max-line-length = 100

[pycodestyle]
exclude = _astropy_init.py,extern,__init__.py
max-line-length = 100
